# MPSU

./: README.md
PKMPSU/: CMakeLists.txt
PKMPSU/ECPoint/: bigint.cpp  bigint.h  ec_group.cpp  ec_group.h  ec_point.cpp  ec_point.h  elgamal.cpp  elgamal.h  global.cpp  global.h  murmurhash2.cpp  murmurhash2.h  openssl.h  routines.cpp  routines.h  std.h
PKMPSU/common/: Defines.h  util.cpp  util.h
PKMPSU/mpsu/: main.cpp  pkmpsu.cpp  pkmpsu.h  pkpmt.cpp  pkpmt.h  rot.cpp  rot.h
PKMPSU/offlineGen/: TripleGen.cpp  TripleGen.h
SKMPSU/: CMakeLists.txt
SKMPSU/common/: Defines.h  util.h
SKMPSU/mpsu/: bssPMT.cpp  bssPMT.h  main.cpp  mpsu.cpp  mpsu.h  mssROT.cpp  mssROT.h
SKMPSU/offlineGen/: RotGen.cpp  RotGen.h  TripleGen.cpp  TripleGen.h  VoleGen.cpp  VoleGen.h
autoTestShell/: autoTestPK.sh  autoTestSK.sh
